Replaced the Occurrence term in map popup that may lead to confusion. Fixes #2.

--- a/formidabel/ants_atlas/templates/index.html
+++ b/formidabel/ants_atlas/templates/index.html
@@ -113,7 +113,7 @@
 			<script type="text/html" id="mapPopupContent">
 			<div>
 			<h3><%= square_id %></h3> 
-			<%= occ_counter %> occurrence(s) for <%= species_name %>.
+			<%= occ_counter %> record(s) for <%= species_name %>.
 			</div>
 			</script>
 
